kubernetes/app2-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: app2-svc
  namespace: we-road
spec:
  selector:
    app: app2
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
