kubernetes/svc-app1.yml
apiVersion: v1
kind: Service
metadata:
  namespace: we-road
  name: app1-svc
spec:
  selector:
    app: app1
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
